[tool.poetry]
name = "ycrawler"
version = "0.1.0"
description = ""
authors = ["erastoff <yuriy.erastov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.3"
beautifulsoup4 = "^4.12.3"
aiofiles = "^23.2.1"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
